Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4.3, 10.3.13
Description
Hi, used this scenario:
- Start given number of nodes - with my test 5 nodes with 10.3 Maria + 3.x Galera.
- Shutdown node5
- Start node5 with 10.4 Maria + 4.x Galera.(upgrade)
- Run mysql_upgrade on node5
- Shutdown node5
- Start node5
- Run sysbench prepare and run:
Prepare:
sysbench oltp_read_only --mysql-host=localhost --mysql-port=3311 --mysql-user=root --mysql-socket=/tmp/mysql-node5.sock --tables=10 --table-size=10000 prepare |
Run:
sysbench oltp_read_write --mysql-host=localhost --mysql-port=3311 --mysql-user=root --mysql-socket=/tmp/mysql-node5.sock --tables=10 --table-size=10000 run |
sysbench 1.0.16 (using bundled LuaJIT 2.1.0-beta2)
|
|
|
Running the test with following options: |
Number of threads: 1
|
Initializing random number generator from current time |
|
|
|
|
Initializing worker threads...
|
|
|
Threads started!
|
|
|
FATAL: mysql_drv_query() returned error 2013 (Lost connection to MySQL server during query) for query 'BEGIN' |
FATAL: `thread_run' function failed: /usr/share/sysbench/oltp_common.lua:405: SQL error, errno = 2013, state = 'HY000': Lost connection to MySQL server during query |
From node5 error log:
mysqld: /home/shako/Galera_Tests/MariaDB/wsrep-lib/src/client_state.cpp:108: int wsrep::client_state::before_command(): Assertion `transaction_.active() == false || (transaction_.state() == wsrep::transaction::s_executing || transaction_.state() == wsrep::transaction::s_aborted || (transaction_.state() == wsrep::transaction::s_must_abort && server_state_.rollback_mode() == wsrep::server_state::rm_async))' failed. |
190213 18:38:03 [ERROR] mysqld got signal 6 ; |
|
|
/home/shako/Galera_Tests/dbs/maria_10.4-MDEV-18480/bin/mysqld(_ZN5wsrep12client_state14before_commandEv+0x17f)[0x5557d9df5cf5]
|
src/client_state.cpp:110(wsrep::client_state::before_command())[0x5557d9269176]
|
sql/wsrep_trans_observer.h:350(wsrep_before_command(THD*))[0x5557d926bd55]
|
sql/sql_parse.cc:1293(do_command(THD*))[0x5557d93dd1d8]
|
sql/sql_connect.cc:1399(do_handle_one_connection(CONNECT*))[0x5557d93dcf3c]
|
nptl/pthread_create.c:463(start_thread)[0x7ff3601aa6db]
|